[AI]{Memory}(init)